# bl-wgpu-util

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: depth.rs  image.rs  lib.rs  viewport.rs
src/renderers/: mod.rs
src/renderers/basic_renderer/: basic_renderer.rs  mod.rs  texture_data.rs  uniform_presets.rs  vertex_presets.rs
src/renderers/basic_renderer/dynamic_vertex/: attribute.rs  mod.rs  vertex.rs
src/renderers/basic_renderer/dynamic_vertex/wgsl/: mod.rs  wgsl_attribute.rs  wgsl_vertex.rs
src/renderers/basic_renderer/uniform/: binding_data.rs  dynamic_uniform.rs  mod.rs
src/renderers/clear_color_renderer/: mod.rs
src/renderers/image_renderer/: image_renderer.wgsl  mod.rs
src/renderers/solid_color_renderer/: mod.rs  solid_color_renderer.wgsl
