[package]
name = "bl-wgpu-util"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
encase = "0.12.0"
image = "0.25.10"
wgpu = "29.0.1"
half = { version = "2.7.1", features = ["bytemuck"] }
glam = { version = "0.32.1", features = ["bytemuck", "encase"] }