[package]
name = "bl-wgpu-util"
version = "0.3.0"
edition = "2024"
description = "Personal utility library for wgpu applications: depth buffers, viewports, image/texture helpers, and a flexible renderer abstraction."
license = "MIT OR Apache-2.0"
repository = "https://github.com/blindley/bl-wgpu-util"
keywords = ["wgpu", "graphics", "renderer", "gpu", "texture"]
categories = ["rendering", "graphics"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
encase = "0.12.0"
image = "0.25.10"
wgpu = "29.0.1"
half = { version = "2.7.1", features = ["bytemuck"] }
glam = { version = "0.32.1", features = ["bytemuck", "encase"] }